--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta name="author" content="Daniel Pereira Nunes">
         <meta name="reply-to" content="daniel110nunes@gmail.com">
         <meta http-equiv="content-language" content="en-us">
-        <meta name="description" content="Para o mundo tornar mais justo e igualitario é necessário aprimorar o acesso e as fontes de energia
-        limpa.">
+        <meta name="description" content="For the world to become more fair and equal it is necessary to improve access and energy sources
+        cleans.">
         <meta name="keywords" content="Clean Energy, Green, Green Energy, Clean and Accessible Energy, Solar Energy, Nuclear, Wind, Sustainability, Innovation">
         <title> World Eletric </title>
         <link rel="shortcut icon" href="img/flavicon.png">
@@ -121,12 +121,12 @@
             <section id="boxtexto">
                 <div>
                 <h1 class="azul">Nuclear</h1>
-                <p class="azul justificado">A energia nuclear, também chamada atômica, é obtida a partir da fissão do núcleo do átomo de 
-                    urânio enriquecido, liberando uma grande quantidade de energia. A energia nuclear mantém unidas as partículas do núcleo 
-                    de um átomo. A divisão desse núcleo em duas partes provoca a liberação de grande quantidade de energia.</p>
-                <p class="azul justificado">Atualmente os Estados Unidos lideram a produção de energia nuclear, porém os países mais
-                    dependentes da energia nuclear são França, Suécia, Finlândia e Bélgica. Na França, cerca de 80% de sua eletricidade 
-                    é oriunda de centrais atômicas.</p>
+                <p class="azul justificado">Nuclear energy, also called atomic energy, is obtained from the fission of the nucleus of the atom of 
+                    enriched uranium, releasing a large amount of energy. Nuclear energy holds together the particles of the nucleus 
+                    of an atom. The division of this nucleus into two parts causes the release of a great amount of energy.</p>
+                <p class="azul justificado">The United States currently leads the way in nuclear energy production, but the most
+                    dependent on nuclear energy are France, Sweden, Finland and Belgium. In France, about 80% of its electricity 
+                    comes from atomic power plants.</p>
             </div>
             </section>
         <section id="Eólica" class="containerbox eolica parallax"></section>
