--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
         </header>
     <!--INTRODUÇÃO-->
-    <p class="azul centralizado">Article translated by Deepl</p>
+    <p class="azul centralizado">Article translated by</p> <a id="deepl" href="https://www.deepl.com/translator" target="blanck">Deepl</a>
         <section>
             <div class="containerleft dois">
                 <iframe width="100%" height="315" src="https://www.youtube.com/embed/1kUE0BZtTRc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
