--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="description" content="For the world to become more fair and equal it is necessary to improve access and energy sources
         cleans.">
         <meta name="keywords" content="Clean Energy, Green, Green Energy, Clean and Accessible Energy, Solar Energy, Nuclear, Wind, Sustainability, Innovation">
-        <title> Eletric World </title>
+        <title> Electric World </title>
         <link rel="shortcut icon" href="img/flavicon.png">
         <link href="https://fonts.googleapis.com/css2?family=Sansita:ital,wght@0,400;0,700;0,800;0,900;1,400;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&family=Sansita:ital,wght@0,400;0,700;0,800;0,900;1,400;1,700;1,800;1,900&display=swap" rel="stylesheet">
