--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
         <meta name="author" content="Daniel Pereira Nunes">
         <meta name="reply-to" content="daniel110nunes@gmail.com">
         <meta http-equiv="content-language" content="en-us">
-        <meta name="description" content="For the world to become more fair and equal it is necessary to improve access and energy sources
-        cleans.">
+        <meta name="description" content="To make the world more fair and equal it is necessary to improve access to green energy.">
         <meta name="keywords" content="Clean Energy, Green, Green Energy, Clean and Accessible Energy, Solar Energy, Nuclear, Wind, Sustainability, Innovation">
         <title> Electric World </title>
         <link rel="shortcut icon" href="img/flavicon.png">
