--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <section id="Maremotriz" class="containerbox maremotriz parallax"></section>
             <section id="boxtexto">
             <div>
-                <h1 class="azul">Tiday Energy</h1>
+                <h1 class="azul">Tidal Energy</h1>
                 <p class="azul justificado">Tidal energy, also known as tidal energy, is obtained by taking advantage of the energy coming from the unevenness of the tides. For this energy to be reversed into electricity, dams, locks (allowing water to enter and exit) and power generating units must be built.</p>
                 <p class="azul justificado">The system used is similar to that of a hydroelectric power plant. The dams are built near the sea, and the dams are responsible for collecting water during high tide. The water is stored and then released during low tide, passing through a turbine that generates electricity.</p>
             </div>
