--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             </div>
             <div class="containerleft dois">
                 <h1 class="branco centralizado">Solutions</h1>
-                <p class="branco justificado">Adopting sustainable cost patterns for a wide range of technology can also reduce overall energy consumption by 14 percent. That means 1300 fewer power plants on the planet. Expanding infrastructure and modernizing technology to provide clean energy in all developing countries is a crucial goal for economic growth to collaborate with the environment.</p>
+                <p class="branco justificado">Adopting sustainable cost patterns for a wide range of technology can also reduce overall energy consumption by 14%. That means 1300 fewer power plants on the planet. Expanding infrastructure and modernizing technology to provide clean energy in all developing countries is a crucial goal for economic growth to collaborate with the environment.</p>
                 <p class="branco justificado">Providing energy advice at home, small investments can reduce energy expenditures, especially an overall reduction in consumption.
                 </p>
                 <p class="branco justificado">Bicycling is a 100% sustainable means of transportation.</p>
