--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             <h1 id="titlesobre" class="azul justificado centro">About me</h1>
             <p id="titlesobre" class="azul justificado centro"> by Daniel Pereira Nunes<p>
             <p class="azul justificado autortext">My name is Daniel Pereira Nunes, I'm 16 years old and I live in Bahia - Brazil. I'm in my last year of high school.</p>
-                <p class="azul justificado autortext">The course was a great learning, with excellent mentors. I'm sure it will add to my career. Thanks <a id="deepl" href="https://www.linkedin.com/in/julianaribeirof/" target="blanck">Juliana Ribeiro </a> & Junior Achievement!</p>
+                <p class="azul justificado autortext">The course was a great learning, with excellent mentors. I'm sure it will add to my career. Thanks <a id="deepl" href="https://www.linkedin.com/in/julianaribeirof/" target="blanck">Juliana Ribeiro </a> & Junior Achievement Paraná!</p>
             </div>
         </div>
     </section>
