--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             </section>
     <!--METAS-->
     <section id="icons2">
-        <h2 class="azul centralizado">Green Energy promotes:</h2> 
+        <h2 class="azul centralizado">Green and affordable energy promotes:</h2> 
     <div id="botao2" class="containerleft seis">
         <img id="icon2" src="img/powerpoint.png">
         <h3 class="azul centralizado">Education</h3>
